Add button 'switch title'

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,11 @@
 
 </form>
 
+<div>
+  <span> Switch some title "TEST"</span>
+  <button id="switch">Switch</button>
+</div>
+<script src="main.js"></script>
 </body>
 
 </html>
